--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
 		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.2",
-		"eslint": "^8.56.0",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
 		"pg": "^8.11.3",
 		"sequelize": "^6.35.2"
 	},
 	"devDependencies": {
+		"@rocketseat/eslint-config": "^2.1.0",
+		"eslint": "^8.56.0",
+		"eslint-plugin-prettier": "^5.1.3",
 		"nodemon": "^3.0.3",
 		"vitest": "^1.2.1"
 	}
