--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "vitest",
-		"dev": "nodemon ./src/app.js"
+		"start": "nodemon ./src/app.js"
 	},
+	"type":"module",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
