--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "vitest",
-		"start": "nodemon ./src/app.js"
+		"start": "nodemon ./app.js"
 	},
-	"type":"module",
+	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
