--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"eslint": "^8.56.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"nodemon": "^3.0.3",
+		"sequelize-cli": "^6.6.2",
 		"vitest": "^1.2.1"
 	}
 }
