--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.501.0",
 		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
-		"dotenv": "^16.3.2",
+		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
+		"multer-s3": "^3.0.1",
 		"pg": "^8.11.3",
 		"pg-hstore": "^2.3.4",
-		"sequelize": "^6.35.2"
+		"sequelize": "^6.35.2",
+		"sharp": "^0.33.2"
 	},
 	"devDependencies": {
 		"@rocketseat/eslint-config": "^2.1.0",
@@ -27,6 +31,6 @@
 		"eslint-plugin-prettier": "^5.1.3",
 		"nodemon": "^3.0.3",
 		"sequelize-cli": "^6.6.2",
-		"vitest": "^1.2.1"
+		"vitest": "^1.2.2"
 	}
 }
