Atualização do .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-DB_NAME=orange_portfolio
+PORT=
+JWT_PASSWORD=
+JWT_EXPIRE=
+DB_NAME=
 DB_USER=
 DB_PASSWORD=
-DB_HOST=localhost
-DB_PORT=5432
+DB_HOST=
+DB_PORT=
+AWS_KEY=
+AWS_ID=
+AWS_REGION=
+BUCKET=
